# grahify-light

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
benchmarking/: Cargo.toml  Dockerfile  README.md
benchmarking/result/: results.json  results.md  round-1-understanding.md  round-2-follow-up.md
benchmarking/result/answers/: direct-codex-round-1-understanding.md  direct-codex-round-2-follow-up.md  graphify-light-round-1-understanding.md  graphify-light-round-2-follow-up.md  graphify-round-1-understanding.md  graphify-round-2-follow-up.md
benchmarking/src/: main.rs
docs/: upstream-graphify-review.md
src/: config.rs  detect.rs  extract.rs  graph.rs  install.rs  main.rs  mcp.rs  query.rs
templates/codex/: AGENTS.md
