[package]
name = "graphify-bench"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Containerized Codex token benchmark for raw files, Graphify, and graphify-light."

[[bin]]
name = "graphify-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"

